# subtitles

./: .gitignore  .gitmodules  Makefile  README.md
Source/: DroidSans.h  Helpers.h  Mod.cpp  PluginAPI.h  SigScan.cpp  SigScan.h
hashmap/: Cargo.toml  build.rs
hashmap/src/: lib.rs
subtitle_maker/: .gitignore  Cargo.toml  README.md  subtitles.csv
subtitle_maker/src/: main.rs
